--- a/jamsesh-react/jamsesh-app/package.json
+++ b/jamsesh-react/jamsesh-app/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.16.3",
-    "firebaseui": "^3.1.1",
-    "react-firebaseui": "^3.0.4",
     "bootstrap": "^4.1.1",
+    "express": "^4.16.3",
+    "firebase": "^5.2.0",
+    "firebaseui": "^3.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-firebaseui": "^3.0.4",
     "react-responsive-carousel": "^3.1.41",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
