--- a/jamsesh-react/jamsesh-app/package.json
+++ b/jamsesh-react/jamsesh-app/package.json
@@ -22,5 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "css-loader": "^1.0.0"
   }
 }
