--- a/jamsesh-react/jamsesh-app/package.json
+++ b/jamsesh-react/jamsesh-app/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.3",
     "firebase": "^5.2.0",
     "firebaseui": "^3.1.1",
+    "gapi": "0.0.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-firebaseui": "^3.0.4",
