installed redux and established constants as well as inital state

--- a/jamsesh-react/jamsesh-app/package.json
+++ b/jamsesh-react/jamsesh-app/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "1.1.4",
     "react-slick": "^0.23.1",
     "reactstrap": "^6.3.0",
+    "redux": "^4.0.0",
     "svgs": "^3.2.1"
   },
   "scripts": {
