added gapi script and firebase functions

--- a/jamsesh-react/jamsesh-app/package.json
+++ b/jamsesh-react/jamsesh-app/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.2",
+    "coffee-script": "^1.12.7",
+    "coffeescript": "^2.3.1",
     "express": "^4.16.3",
     "firebase": "^5.2.0",
+    "firebase-admin": "^5.13.0",
+    "firebase-functions": "^1.1.0",
     "firebaseui": "^3.1.1",
     "gapi": "0.0.3",
+    "gtoken": "^2.3.0",
+    "jquery": "^3.3.1",
     "muicss": "^0.9.39",
+    "path": "^0.12.7",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-firebaseui": "^3.0.4",
