fixed the api url and get request

--- a/jamsesh-react/jamsesh-app/package.json
+++ b/jamsesh-react/jamsesh-app/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.1.2",
     "coffee-script": "^1.12.7",
     "coffeescript": "^2.3.1",
+    "eslint": "^5.1.0",
     "express": "^4.16.3",
     "firebase": "^5.2.0",
     "firebase-admin": "^5.13.0",
@@ -14,6 +15,7 @@
     "firebase-tools": "^3.19.3",
     "firebaseui": "^3.1.1",
     "gapi": "0.0.3",
+    "gapi-client": "0.0.3",
     "gtoken": "^2.3.0",
     "jquery": "^3.3.1",
     "muicss": "^0.9.39",
