--- a/jamsesh-react/jamsesh-app/firebase.json
+++ b/jamsesh-react/jamsesh-app/firebase.json
@@ -1,8 +1,23 @@
 {
   "database": {
-    "rules": "database.rules.json"
+    "rules": "firedata.json"
   },
   "functions": {
-  },
     "source": "functions"
+  },
+  "source": "functions",
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
+}
