--- a/jamsesh-react/jamsesh-app/package.json
+++ b/jamsesh-react/jamsesh-app/package.json
@@ -14,9 +14,11 @@
     "firebase-functions": "^1.1.0",
     "firebase-tools": "^3.19.3",
     "firebaseui": "^3.1.1",
+    "fs": "0.0.1-security",
     "gapi": "0.0.3",
     "gapi-client": "0.0.3",
     "gtoken": "^2.3.0",
+    "http": "0.0.0",
     "jquery": "^3.3.1",
     "muicss": "^0.9.39",
     "npm-cli": "^0.1.0",
