--- a/jamsesh-react/jamsesh-app/package.json
+++ b/jamsesh-react/jamsesh-app/package.json
@@ -9,6 +9,7 @@
     "firebase": "^5.2.0",
     "firebaseui": "^3.1.1",
     "gapi": "0.0.3",
+    "history": "^4.7.2",
     "muicss": "^0.9.39",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
